--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ fmod_editor.log
 /Assets/FMODAssets/*
 /Assets/FMODStudioCache.meta
 UserSettings/EditorUserSettings.asset
+UserSettings/EditorUserSettings.asset
